===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 1.3.1 (2005-04-??)
--------------------------

- You can now pass the special value ``objc.NULL`` as the value
  for 'in' and 'inout' arguments. This tells the bridge to pass
  a NULL pointer to the Objective-C method, instead of a pointer
  to the value.

- First stab at wrapping some Tiger frameworks:

  - ``AppleScriptKit``
  - ``Automator``
  - ``CoreData``
  - ``DiscRecording``
  - ``DiscRecordingUI``
  - ``Quartz``
  - ``QTKit``
  - ``SyncServices``
  - ``XgridFoundation``

  Documentation and tests not yet written.

- Add a CoreData example: a python version of the OutlineEditor example
  from Apple.

  TODO: compile the .xcdatamodel file.

- If the selector name ends with ':error:' and the last argument is a pointer
  to an object, the argument is now assumed to be an output argument.

- More conveniences for ``list``-like and ``dict``-like
  objects: ``__reversed__``, ``reverse``, ``pop``,
  ``remove``, ``fromkeys``.

- ``OC_PythonDictionary`` and ``OC_PythonArray`` now return
  ``NSNull`` as appropriate.

- New ``WebKitInterpreter`` example in ``Examples/Plugins``,
  Uses the new WebKit Cocoa plugin API available in Safari 1.3
  and later to embed a PyInterpreter in the browser.

- Fixed a ``CFBundleRef`` reference counting bug in
  Foundation._Foundation.  Symptom of this is usually crashing
  after having loaded a PyObjC-based plugin into an Obj-C app.

- New ``PyObjCTools.AppHelper`` functions: ``callAfter`` and
  ``callLater``, conveniences for calling Python functions on
  the main thread as soon as possible, or after a delay.

- Twisted examples changed to use ``threadedselectreactor``
  instead of ``cfreactor``.  ``cfreactor`` is deprecated.
  Needs Twisted newer than 2.0 (currently svn r13575 or later).

- ``objc.inject`` now injects on main thread by default,
  takes third useMainThread argument to change this behavior.